[project]
name = "ballclips"
version = "0.1.0"
description = "Prototype UI for selecting video in/out frames and crop regions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.42",
    "implicitdict>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ballclips = "ballclips.main:main"

[tool.uv]
package = true
